[gd_scene load_steps=4 format=2]

[ext_resource path="res://ball/ball.gd" type="Script" id=1]
[ext_resource path="res://ball/Sprites/ballBlue_04.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 13.4734

[node name="Ball" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Linear" ]
bounce = 300.0
directional_factor = 10.0
points = 100

[node name="BallSprite" type="Sprite" parent="." index="0"]

scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="2"]

rect = Rect2( -10, -10, 20, 20 )

[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]


